[package]
name = "arkworks-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-groth16 = { version = "0.3.0", default-features = false}
ark-std = { version = "0.3.0", features = ["std"]}
ark-ff = { version = "0.3.0", default-features = false}
ark-relations = { version = "0.3.0", default-features = false}
ark-bn254 = { version = "0.3.0", features = ["curve"]}
ark-ec = { version = "0.3.0", default-features = false}
num-traits = "0.2.14"
ark-serialize = "^0.3.0"